--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
         <meta charset=”UTF-8”>
         <meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
         <title>AluraBooks</title>
-    </head>
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="styles.css">
+ <head>
 
-    <body>
-        <h1>AluraBooks</h1>
-    </body>
-</html>
+        <body>
+            <header class=”cabeçalho”>
+                <span class="cabeçalho_menu-hamburguer"></span>
+                ><img src="alurabooks-main/AluraBooks/Logo.svg" alt="logo da AluraBooks">
+                <a href="#"><img src="alurabooks-main/AluraBooks/Favoritos.svg" alt="meus favoritos"></a>
+                <a href="#"><img src="alurabooks-main/AluraBooks/Compras.svg" alt="carrinho de compras"></a>
+                <a href="#"><img src="alurabooks-main/AluraBooks/Usuário.svg" alt="meu perfil"></a>
+        <header>
+ </body>
+
+<html>
